--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-
+<!--resource card template-->
 <div class="row">
     {% for data in resource_list %}
     <div class="col s12 m4">
