--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,6 +10,7 @@
 
 {% block content %}
 
+<!--Card of sign up-->
 <div class="row">
   <div class="col s12 l8 offset-l2">
       <div class="card">
