--- a/templates/approval_comments.html
+++ b/templates/approval_comments.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% load static %}
 
+<!--Card for approval and delete comments-->
 <div class="row">
     <div class="col s12 l8 offset-l2">
         <div class="card">
