--- a/templates/base.html
+++ b/templates/base.html
@@ -68,8 +68,8 @@
                     </a>
                 </li>
                 {% else %}
-                <li><a class="dropdown-button" href="#!" data-activates="dropdown1" aria-labelledby="drop-down-button">
-                    {{ user.username }}<i class="material-icons right">arrow_drop_down</i>
+                <li><a class="dropdown-button" href="#!" data-activates="dropdown1" 
+                        aria-labelledby="drop-down-button">{{ user.username }}<i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
                 {% endif %}
@@ -94,7 +94,8 @@
                 <li><a href="{% url 'account_logout' %}">Logout</a></li>
                 {% endif %}
             </ul>
-            <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons" aria-labelledby="navigation-menu">menu</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons" 
+                aria-labelledby="navigation-menu">menu</i></a>
         </div>
     </nav>
     
@@ -111,7 +112,10 @@
         {% if page_obj.has_other_pages %}
             <ul class="pagination center bottom">
                 {% if page_obj.has_previous %}
-                    <li class="waves-effect"><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
+                    <li class="waves-effect">
+                        <a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i>
+                        </a>
+                    </li>
                     
                 {% endif %}
                 {% for i in page_obj.paginator.page_range %}
@@ -122,7 +126,10 @@
                     {% endif %}
                 {% endfor %}
                 {% if page_obj.has_next %}
-                    <li class="waves-effect"><a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
+                    <li class="waves-effect">
+                        <a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i>
+                        </a>
+                    </li>
                 {% endif %}
             </ul>
         {% endif %}
@@ -132,8 +139,9 @@
         <footer class="page-footer">
             <div class="footer-copyright">
               <div class="container">
-              © 2023
-              <a class="grey-text text-lighten-4 right" href="https://github.com/satogako/list-of-links" rel="nofollow" target="_blank">
+                © 2023
+              <a class="grey-text text-lighten-4 right" href="https://github.com/satogako/list-of-links" 
+                rel="nofollow" target="_blank">
                 <i class="fa-brands fa-github-alt fa-2xl"></i>
               </a>
               </div>
@@ -155,7 +163,7 @@
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-light btn btn-color">OK</a>
         </div>
-    </div>
+    </div> 
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script> 
