--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,19 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
-    <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}" media="screen,projection">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
 </head>
 <body>
     
     <!-- Navigation -->
     <ul id="dropdown1" class="dropdown-content">
-        <p class="text-placeholder center-align">{{ user.username }}</p>
+        <li><span class="text-placeholder">{{ user.username }}</span></li>
         <li class="divider"></li>
         {% if user.username == "admin" %}
         <li><a href="{% url 'approval_comments' %}">Approve comments</a></li>
@@ -32,7 +32,7 @@
         <li class="divider"></li>
         <li><a href="{% url 'account_logout' %}">Logout</a></li>
     </ul>
-    <nav role="navigation">
+    <nav>
         <div class="nav-wrapper">
             <a data-target="modal-about" class="modal-trigger hand-cursor">
                 <img class="responsive-img" src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List Of List">
@@ -108,7 +108,7 @@
     </main>
 
     <!--nav pagination-->
-    <div class="nav-pagination" aria-label="Page navigation">
+    <div class="nav-pagination">
         {% if page_obj.has_other_pages %}
             <ul class="pagination center bottom">
                 {% if page_obj.has_previous %}
@@ -134,8 +134,8 @@
             </ul>
         {% endif %}
     </div>
+
     <!--footer-->
-    <footer>
         <footer class="page-footer">
             <div class="footer-copyright">
               <div class="container">
@@ -147,7 +147,6 @@
               </div>
             </div>
           </footer>
-    </footer>
 
     <!-- Modal-About Window -->
     <div id="modal-about" class="modal">
@@ -165,7 +164,7 @@
         </div>
     </div> 
     
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script> 
     <script src="{% static 'js/script.js' %}"></script>
     <script src="https://kit.fontawesome.com/4098b4a9a9.js" crossorigin="anonymous"></script>
